# parallax

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  pages.yml
crates/connector-aws-synthetic/: Cargo.toml
crates/connector-aws-synthetic/src/: lib.rs
crates/connector-gcp-synthetic/: Cargo.toml
crates/connector-gcp-synthetic/src/: lib.rs
crates/parallax-cli/: Cargo.toml
crates/parallax-cli/src/: main.rs
crates/parallax-connect/: Cargo.toml
crates/parallax-connect/src/: builder.rs  connector.rs  error.rs  event.rs  lib.rs  scheduler.rs
crates/parallax-connect/tests/: integration.rs
crates/parallax-core/: Cargo.toml
crates/parallax-core/src/: entity.rs  error.rs  lib.rs  property.rs  relationship.rs  source.rs  timestamp.rs
crates/parallax-graph/: Cargo.toml
crates/parallax-graph/src/: blast.rs  coverage.rs  finder.rs  lib.rs  path.rs  pattern.rs  reader.rs  test_helpers.rs  traversal.rs
crates/parallax-graph/tests/: integration.rs
crates/parallax-ingest/: Cargo.toml
crates/parallax-ingest/src/: error.rs  lib.rs  sync.rs  validate.rs
crates/parallax-policy/: Cargo.toml
crates/parallax-policy/src/: evaluator.rs  lib.rs  posture.rs  rule.rs
crates/parallax-policy/tests/: integration.rs
crates/parallax-query/: Cargo.toml
crates/parallax-query/src/: ast.rs  error.rs  executor.rs  lexer.rs  lib.rs  parser.rs  planner.rs
crates/parallax-query/tests/: integration.rs
crates/parallax-server/: Cargo.toml
crates/parallax-server/src/: lib.rs  middleware.rs  routes.rs  state.rs
crates/parallax-server/tests/: api.rs  roundtrip.rs
crates/parallax-store/: Cargo.toml
crates/parallax-store/src/: compaction.rs  engine.rs  error.rs  index.rs  lib.rs  memtable.rs  metrics.rs  segment.rs  snapshot.rs  wal.rs  write_batch.rs
crates/parallax-store/tests/: integration.rs
docs/: book.toml  custom.css
docs/src/: SUMMARY.md  introduction.md
docs/src/api/: admin.md  authentication.md  entities.md  errors.md  ingest.md  metrics.md  overview.md  query.md
docs/src/architecture/: concurrency.md  crate-map.md  data-model.md  design-principles.md  invariants.md  overview.md
docs/src/connectors/: builders.md  observability.md  overview.md  steps.md  sync.md  writing.md
docs/src/graph/: blast-radius.md  coverage-gap.md  finder.md  overview.md  reader.md  shortest-path.md  traversal.md
docs/src/policy/: evaluation.md  overview.md  posture.md  rules.md
docs/src/query/: examples.md  execution.md  filters.md  introduction.md  paths.md  syntax.md  traversal.md
docs/src/reference/: cli.md  configuration.md  entity-classes.md  performance.md  relationship-verbs.md  roadmap.md  value-types.md
docs/src/storage/: engine-api.md  memtable.md  overview.md  segments.md  snapshots.md  wal.md
