[package]
name = "parallax-connect"
description = "Connector SDK for Parallax — trait, entity/relationship builders, topological step scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["connector", "graph", "security", "integration", "sdk"]
categories = ["network-programming", "asynchronous"]

[dependencies]
parallax-core = { path = "../parallax-core" }
parallax-ingest = { path = "../parallax-ingest" }
compact_str = { version = "0.8", features = ["serde"] }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
