[package]
name = "parallax-core"
description = "Core types for the Parallax graph engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
compact_str = { version = "0.8", features = ["serde"] }
blake3 = "1"
