[package]
name = "parallax-graph"
description = "Graph engine: BFS/DFS traversal, pattern matching, shortest path, blast radius"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["graph", "graph-engine", "traversal", "security", "cybersecurity"]
categories = ["algorithms", "data-structures"]

[dependencies]
parallax-core = { path = "../parallax-core" }
parallax-store = { path = "../parallax-store" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
compact_str = { version = "0.8", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
