[package]
name = "parallax-ingest"
description = "Sync protocol, source-scoped diffing, and write batch construction for Parallax"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["graph", "ingest", "security", "sync", "database"]
categories = ["database-implementations", "network-programming"]

[dependencies]
parallax-core = { path = "../parallax-core" }
parallax-store = { path = "../parallax-store" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
compact_str = { version = "0.8", features = ["serde"] }
tempfile = "3"
