[package]
name = "parallax-policy"
description = "Graph-backed policy engine for continuous security compliance — YAML rules, posture scoring"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["policy", "compliance", "security", "cybersecurity", "graph"]
categories = ["network-programming", "data-structures"]

[dependencies]
parallax-core = { path = "../parallax-core" }
parallax-graph = { path = "../parallax-graph" }
parallax-query = { path = "../parallax-query" }
compact_str = { version = "0.8", features = ["serde"] }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
parallax-store = { path = "../parallax-store" }
tempfile = "3"
