[package]
name = "parallax-query"
description = "PQL — Parallax Query Language — lexer, parser, planner, and executor for graph queries"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["graph", "query-language", "parser", "database", "security"]
categories = ["parser-implementations", "database-implementations"]

[dependencies]
parallax-core = { path = "../parallax-core" }
parallax-graph = { path = "../parallax-graph" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
parallax-store = { path = "../parallax-store" }
compact_str = { version = "0.8", features = ["serde"] }
tempfile = "3"
