[package]
name = "parallax-server"
description = "REST API server for the Parallax graph engine — query, ingest, policy, and metrics endpoints"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["graph", "api", "security", "server", "cybersecurity"]
categories = ["network-programming", "web-programming::http-server"]

[dependencies]
parallax-core = { path = "../parallax-core" }
parallax-store = { path = "../parallax-store" }
parallax-graph = { path = "../parallax-graph" }
parallax-query = { path = "../parallax-query" }
parallax-policy = { path = "../parallax-policy" }
parallax-ingest = { path = "../parallax-ingest" }
parallax-connect = { path = "../parallax-connect" }
axum = "0.7"
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "request-id", "sensitive-headers"] }
hex = "0.4"
anyhow = "1"
compact_str = { version = "0.8", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
